# malloc_debug

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
malloc_debug/: build.gradle
malloc_debug/src/main/: AndroidManifest.xml
malloc_debug/src/main/cpp/: CMakeLists.txt
malloc_debug/src/main/cpp/demangle/: CMakeLists.txt  demangle.h
malloc_debug/src/main/cpp/include/: debug_log.h
malloc_debug/src/main/cpp/include/android-base/: stringprintf.h  unique_fd.h
malloc_debug/src/main/cpp/include/art_api/: dex_file_supp.cc  dex_file_support.h
malloc_debug/src/main/cpp/include/procinfo/: process_map.h
malloc_debug/src/main/cpp/lzma/: CMakeLists.txt
malloc_debug/src/main/cpp/malloc_debug/: CMakeLists.txt  Config.cpp  DebugData.cpp  MapData.cpp  PointerData.cpp  PointerData.h  ReadFileToString.cpp  RecordData.cpp  UnwindBacktrace.cpp  exported32.map  exported64.map  malloc_debug.cpp
malloc_debug/src/main/cpp/malloc_debug/include/: ReadFileToString.h
malloc_debug/src/main/cpp/malloc_debug/include/async_safe/: async_safe_log.cpp  log.h
malloc_debug/src/main/cpp/malloc_debug/include/private/: bionic_malloc_dispatch.h
malloc_debug/src/main/cpp/unwindstack/: CMakeLists.txt  DwarfSection.cpp  Elf.cpp  ElfInterface.cpp  ElfInterfaceArm.cpp  LocalUnwinder.cpp  Log.cpp  Maps.cpp  Regs.cpp  RegsArm.cpp
malloc_debug/src/main/cpp/unwindstack/unwindstack/include/unwindstack/: RegsGetLocal.h
malloc_debug/src/main/java/com/malloc/test/: MallocInit.java
